--- a/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/templates/catalog/bookinstance_list_borrowed_user.html
@@ -1,16 +1,11 @@
 {% extends "base_generic.html" %}
-
+{% load render_table from django_tables2 %}
 {% block content %}
     <h1>My Borrowed books</h1>
-
-    {% if bookinstance_list %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    {% if mybooks %}
     <ul>
-
-      {% for bookinst in bookinstance_list %} 
-      <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'book-detail' bookinst.book.pk %}"><strong>{{bookinst.book.title}}</strong></a> (Due: {{ bookinst.due_back }}) <small>({{ bookinst.id }})</small>
-      </li>
-      {% endfor %}
+      {% render_table mybooks %}
     </ul>
 
     {% else %}
