edited wording on index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block title %}<title>Library Home</title>{% endblock %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
+  <h1>My Simple Library</h1>
+  <p>Welcome to my simple library! The goal of this website is to learn how to make a Django web app.</p>
   <h2>Dynamic content</h2>
   <p>The library has the following record counts:</p>
   <ul>
