added filtering for tables

--- a/templates/catalog/books.html
+++ b/templates/catalog/books.html
@@ -1,13 +1,28 @@
 {% extends "base_generic.html" %}
 {% load render_table from django_tables2 %}
+{% load bootstrap3 %}
 {% block content %}
   <h1>Book List</h1>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  {% if filter %}
+        <form action="" method="get" class="form form-inline">
+            {% bootstrap_form filter.form layout='inline' %}
+            {% bootstrap_button 'filter' button_type='submit'%}
+        </form>
+    {% if books %}
+  <ul>
+    {% render_table filter.qs 'django_tables2/bootstrap.html' %}
+  </ul>
+  {% else %}
+    <p>No books found.</p>
+  {% endif %}
+    {% else %}
   {% if books %}
   <ul>
     {% render_table books %}
   </ul>
   {% else %}
-    <p>There are no books in the library.</p>
-  {% endif %}       
+    <p>No books found.</p>
+  {% endif %}
+  {% endif %}
 {% endblock %}
