--- a/templates/catalog/bookinstance_list_borrowed_all.html
+++ b/templates/catalog/bookinstance_list_borrowed_all.html
@@ -1,14 +1,28 @@
 {% extends "base_generic.html" %}
 {% load render_table from django_tables2 %}
+{% load bootstrap3 %}
 {% block content %}
     <h1>All Borrowed books</h1>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  {% if filter %}
+        <form action="" method="get" class="form form-inline">
+            {% bootstrap_form filter.form layout='inline' %}
+            {% bootstrap_button 'filter' button_type='submit'%}
+        </form>
     {% if borrowedbooks %}
-    <ul>
-      {% render_table borrowedbooks %}
-    </ul>
-
+  <ul>
+    {% render_table filter.qs 'django_tables2/bootstrap.html' %}
+  </ul>
+  {% else %}
+    <p>No borrowed books found.</p>
+  {% endif %}
     {% else %}
-      <p>There are no books borrowed.</p>
-    {% endif %}       
+  {% if borrowedbooks %}
+  <ul>
+    {% render_table borrowedbooks %}
+  </ul>
+  {% else %}
+    <p>No borrowed books found.</p>
+  {% endif %}
+  {% endif %}
 {% endblock %}
