--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -1,64 +1,146 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   {% block title %}<title>Local Library</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <meta name="description" content="A simple webapp to help me learn Django">
+  <meta name="author" content="David Bergvelt">
+
   <!-- Add additional CSS in static file -->
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% block head-css %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap-grid.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap-grid.min.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap-reboot.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap-reboot.min.css' %}"
+          rel="stylesheet" media="screen">
+
+    <style type="text/css">
+      .asteriskField {
+        display: none;
+      }
+
+      form .alert ul li{
+        list-style: none;
+      }
+
+      form .alert ul{
+        padding: 0;
+        margin: 0;
+      }
+    </style>
+  {% endblock %}
 </head>
 <body>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-2">
-      {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="{% url 'books' %}">All books</a></li>
-          <li><a href="{% url 'authors' %}">All authors</a></li>
-        </ul>
-        <ul class="sidebar-nav">
-          {% if user.is_authenticated %}
-            <li>User: {{ user.get_username }}</li>
-            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
-            <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-          {% endif %}
-        </ul>
-        {% if user.is_staff %}
-          <hr>
-          <ul class="sidebar-nav">
-            <li>Staff</li>
-            <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
-          </ul>
-        {% endif %}
-      {% endblock %}
-    </div>
-    <div class="col-sm-10 ">{% block content %}{% endblock %}
-      {% block pagination %}
-        {% if is_paginated %}
-          <div class="pagination">
-            <span class="page-links">
-                {% if page_obj.has_previous %}
-                  <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
-              <span class="page-current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-              {% if page_obj.has_next %}
-                <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
-              {% endif %}
-            </span>
-          </div>
-        {% endif %}
-      {% endblock %}
-    </div>
 
+<!-- Fixed navbar -->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <a class="navbar-brand" href="{% url 'index' %}">
+    <img src="{% static 'img/logo.png' %}" width="35" height="35" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="catalogDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true"
+           aria-expanded="false">Catalog</a>
+        <div class="dropdown-menu" aria-labelledby="catalogDropdown">
+          <a class="dropdown-item" href="{% url 'books' %}">Books</a>
+          <a class="dropdown-item" href="{% url 'authors' %}">Authors</a>
+        </div>
+      </li>
+      {% if user.is_authenticated %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+             aria-haspopup="true"
+             aria-expanded="false">My Stuff</a>
+          <div class="dropdown-menu" aria-labelledby="userDropdown">
+            <a class="dropdown-item" href="{% url 'mybooks' %}">My checkouts</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">TODO: My reservations</a>
+          </div>
+        </li>
+      {% endif %}
+      {% if user.is_staff %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="staffDropdown" role="button" data-toggle="dropdown"
+             aria-haspopup="true"
+             aria-expanded="false">Staff</a>
+          <div class="dropdown-menu" aria-labelledby="staffDropdown">
+            <a class="dropdown-item" href="{% url 'all-borrowed' %}">Borrowed Books</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">TODO: Database editor</a>
+            <a class="dropdown-item" href="#">TODO: Ticket manager</a>
+          </div>
+        </li>
+      {% endif %}
+    </ul>
+    {% if user.is_authenticated %}
+      <span class="navbar-text">
+        Welcome, <b>{{ user.get_username }}</b>
+      </span>
+      <a href="{% url 'logout' %}?next={{ request.path }}" class="btn btn-secondary ml-4" role="button">Logout</a>
+    {% else %}
+      <a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-primary ml-4" role="button">Login</a>
+    {% endif %}
   </div>
-</div>
+</nav>
+
+
+<main role="main" class="container">
+
+  <div class="container my-5">
+    {% block content %}{% endblock %}
+    {% block pagination %}
+      {% if is_paginated %}
+        <div class="pagination">
+              <span class="page-links">
+                  {% if page_obj.has_previous %}
+                    <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                  {% endif %}
+                <span class="page-current">
+                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                  </span>
+                {% if page_obj.has_next %}
+                  <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+              </span>
+        </div>
+      {% endif %}
+    {% endblock %}
+  </div>
+
+</main><!-- /.container -->
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
