--- a/templates/catalog/bookinstance_list_borrowed_all.html
+++ b/templates/catalog/bookinstance_list_borrowed_all.html
@@ -1,28 +1,15 @@
 {% extends "base_generic.html" %}
-{% load render_table from django_tables2 %}
+{% load render_table from  django_tables2 %}
 {% load bootstrap3 %}
 {% block content %}
-  <h1>All Borrowed books</h1>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  {% if bookinstance_list %}
+  <h1>All borrowed books</h1>
   {% if filter %}
     <form action="" method="get" class="form form-inline">
       {% bootstrap_form filter.form layout='inline' %}
-      {% bootstrap_button 'filter' button_type='submit' %}
+      {% bootstrap_button 'filter' %}
     </form>
-    {% if borrowedbooks %}
-      <ul>
-        {% render_table filter.qs 'django_tables2/bootstrap.html' %}
-      </ul>
-    {% else %}
-      <p>No borrowed books found.</p>
-    {% endif %}
-  {% else %}
-    {% if borrowedbooks %}
-      <ul>
-        {% render_table borrowedbooks %}
-      </ul>
-    {% else %}
-      <p>No borrowed books found.</p>
-    {% endif %}
+  {% endif %}
+  {% render_table table 'django_tables2/bootstrap.html' %}
   {% endif %}
 {% endblock %}
