--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>My Simple Library</h1>
-  <p>Welcome to my simple library! The goal of this website is to learn how to make a Django web app.</p>
+  <p class="lead">Welcome to my simple library! The goal of this website is to learn how to make a Django web app.</p>
   <h2>Dynamic content</h2>
   <p>The library has the following record counts:</p>
   <ul>
