--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,40 +1,22 @@
 {% extends "base_generic.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
+  <div class="m-auto w-50">
+    <div class="card">
+      <div class="card-body">
+        <form method="post" novalidate>
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="mt-4 btn btn-lg btn-primary btn-block">Sign in</button>
+        </form>
 
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-        please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
-    {% endif %}
-  {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-
-    <input type="submit" value="login"/>
-    <input type="hidden" name="next" value="{{ next }}"/>
-  </form>
-
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+        <div class="mt-3 text-center">
+          <p class="text-muted font-weight-light"><a class="text-reset" href="{% url 'password_reset' %}">Forgot your
+            password?</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
