--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -20,7 +20,7 @@
           rel="stylesheet" media="screen">
     <link href="{% static 'bootstrap/css/bootstrap-grid.min.css' %}"
           rel="stylesheet" media="screen">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{% static 'bootstrap/css/bootstrap-reboot.css' %}"
           rel="stylesheet" media="screen">
     <link href="{% static 'bootstrap/css/bootstrap-reboot.min.css' %}"
