--- a/templates/catalog/authors.html
+++ b/templates/catalog/authors.html
@@ -2,13 +2,6 @@
 {% load render_table from  django_tables2 %}
 {% load bootstrap3 %}
 {% block content %}
-  <h1>Author List</h1>
-  {% if filter %}
-    <form action="" method="get" class="form form-inline">
-      {% bootstrap_form filter.form layout='inline' %}
-      {% bootstrap_button 'filter' %}
-    </form>
-  {% endif %}
-  {% render_table table 'django_tables2/bootstrap4.html' %}
+  {% render_table table %}
 
 {% endblock %}
