--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load socialaccount %}
+{% load account %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -119,11 +121,14 @@
     </ul>
     {% if user.is_authenticated %}
       <span class="navbar-text">
-        Welcome, <b>{{ user.get_username }}</b>
+        Welcome, <b>{% user_display user %}</b>
       </span>
-      <a href="{% url 'logout' %}?next={{ request.path }}" class="btn btn-secondary ml-4" role="button">Logout</a>
+      <a href="{% url 'account_logout' %}?next={{ request.path }}" class="btn btn-secondary ml-4"
+         role="button">Logout</a>
     {% else %}
-      <a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-primary ml-4" role="button">Login</a>
+      <a href="{% url 'account_login' %}?next={{ request.path }}" class="btn btn-primary ml-4" role="button">Login</a>
+      <a href="{% url 'account_signup' %}?next={{ request.path }}" class="btn btn-success ml-2"
+         role="button">Register</a>
     {% endif %}
   </div>
 </nav>
