--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -6,12 +6,16 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-  <h1>{% trans "Password Reset" %}</h1>
+  <div class="jumbotron">
+    <h1 class="display-4">{% trans "Password Reset" %}</h1>
+    <hr class="my-4 invisible">
 
-  {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-  {% endif %}
+    {% if user.is_authenticated %}
+      {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-  <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few
-    minutes.{% endblocktrans %}</p>
+    <p class="lead">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few
+      minutes.{% endblocktrans %}</p>
+
+  </div>
 {% endblock %}
