--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,7 +20,7 @@
         </div>
         <hr>
 
-        <form method="post" novalidate>
+        <form id="id-loginform" method="post" novalidate>
           {% csrf_token %}
           {{ form|crispy }}
           <button type="submit" class="mt-4 btn btn-lg btn-outline-primary btn-block">Sign in regularly</button>
