--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -20,7 +20,7 @@
         </div>
         <hr>
 
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        <form id="id-signupform" method="post" action="{% url 'account_signup' %}">
           {% csrf_token %}
           {{ form|crispy }}
           {% if redirect_field_value %}
